objects/Lead_Assignment_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Alignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alignment</label>
        <referenceTo>TAV4__Alignment__c</referenceTo>
        <relationshipLabel>Lead Assignment Settings</relationshipLabel>
        <relationshipName>Lead_Assignment_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_To_Lead_Triage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To Lead Triage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_WCW__c</fullName>
        <label>Max WCW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_WCW__c</fullName>
        <label>Min WCW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Assignment Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Min_WCW__c</columns>
        <columns>Max_WCW__c</columns>
        <columns>Alignment__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lead Assignment Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Assignment Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>